--- a/public/html/map.html
+++ b/public/html/map.html
@@ -364,6 +364,8 @@
     <button onclick="openAddDataModal()">Neue Daten hinzufügen</button>
     <button id="compare-button" onclick="openCompareMode()">Vergleichen</button>
     <button id="back-button" onclick="goBack()">Kartenansicht beenden</button>
+    <a href="geografischevorhersage.html"><button> Geografische Lage Vorhersage </button></a>
+
 </div>
 
 <!-- Modal für das Hinzufügen neuer Daten -->
