Kalender beim dashboard hinzugefügt

--- a/public/html/dashboardAnalysen.html
+++ b/public/html/dashboardAnalysen.html
@@ -238,6 +238,8 @@
     <a href="operationalEfficiency.html"><i class="fas fa-chart-line"></i> Auktionsstatistiken</a>
     <a href="Netzwerkdiagramm.html"><i class="fas fa-network-wired"></i> Netzwerk-Analyse</a>
     <a href="verkaufszieleFortschritt.html"><i class="fas fa-bullseye"></i> Auktionsziele inkl. Fortschritt</a>
+    <a href="kalender.html"><i class="fas fa-project-diagram"></i> Kalender</a>
+
 </div>
 
 <div id="particles-js"></div>
@@ -299,6 +301,16 @@
             <p>Verfolge die Fortschritte und Ziele aktueller Auktionen mit interaktiven Statistiken.</p>
             <a href="verkaufszieleFortschritt.html" class="button">Auktionsziele anzeigen</a>
         </div>
+
+        <div class="card">
+            <div class="image-container">
+                <i class="fas fa-project-diagram fa-5x" style="color: #7d008c;"></i>
+            </div>
+            <h2>Kalender</h2>
+            <p>Im Kalender können Meetings eingetragen und bestehende Pläne übersichtlich eingesehen werden.</p>
+            <a href="kalender.html" class="button">Zum Kalender</a>
+        </div>
+
     </div>
 </div>
 <script>
